--- a/006 - Lois/index_jp.html
+++ b/006 - Lois/index_jp.html
@@ -1,27 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo_jp.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilo_jp.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="topo">
-        <a href="#" class="link">Sinopse</a>
-        <a href="#" class="link">Disponibilidade</a>
-        <a href="#" class="link">Temporadas</a>
-        <a href="#" class="link">Imagens</a>
+      <a href="#sinopse" class="link">Sinopse</a>
+      <a href="#disponibilidade" class="link">Disponibilidade</a>
+      <a href="#" class="link">Temporadas</a>
+      <a href="#" class="link">Imagens</a>
     </nav>
 
     <div class="banner"></div>
+    <div id="sinopse" class="secao-sinopse">
+      <div class="largura-1024">
+        <h1>Superman & Lois: Uma nova aventura em Smallville</h1>
+        <h2>Sinopse</h2>
+        <p>
+          Após anos enfrentando supervilões megalomaníacos, monstros
+          destruidores e invasores alienígenas, o Homem de Aço e a famosa
+          jornalista Lois Lane retornam à pacata cidade de Smallville para criar
+          os filhos adolescentes, Jonathan e Jordan.
+        </p>
 
-    100%
-links 28px margin 35px
+        <p>
+          Na estreia da série, Superman e Lois retornam a Smallville para
+          enfrentar um de seus maiores desafios: criar dois meninos sendo pais
+          que trabalham.
+        </p>
+      </div>
+    </div>
+    <div id="disponibilidade" class="secao-canais">
+      <div class="largura-1024">
+        <h2>Disponibilidade</h2>
+        <img
+          src="./img/tv.jpg"
+          alt="Logo da HBO Max e Warner"
+          class="img-plataforma"
+        />
+        <p>
+          Superman & Lois já conta com quatro temporadas e está sendo
+          transmitido pelo canal de TV Warner Channel e no serviço de Streaming
+          HBO Max. Os novos episódios da série saem aos sábados.
+        </p>
+      </div>
+    </div>
 
-banner - background
-altura = calc(100vh - 74px);
-
-
-</body>
+    <div id="temporadas" class="secao-temporadas">
+      <div class="largura-1024">
+        <h2>Temporadas</h2>
+        <div class="conteudo-temporada">
+          <h3>Temporada 1</h3>
+          <p>
+            Enquanto se adaptam à nova vida, Lois e Clark tomam uma importante
+            decisão em relação a um de seus filhos. Enquanto isso, as tensões
+            começam a aumentar entre Lois e Morgan Edge.
+          </p>
+        </div>
+        <div class="conteudo-temporada">
+          <h3>Temporada 2</h3>
+          <p>
+            Lois e Clark enfrentam problemas no relacionamento. Chrissy se
+            ajusta para administrar o Smallville Gazette com Lois, e Kyle se
+            preocupa com o envolvimento de Lana com um novo candidato a
+            prefeito.
+          </p>
+        </div>
+        <div class="conteudo-temporada">
+          <h3>Temporada 3</h3>
+          <p>
+            Clark e Lois estão aproveitando a vida simples em uma cidade
+            pequena. No entanto, o trabalho secreto de Lois revela um inimigo
+            mortal que promete mudar a família Kent para sempre.
+          </p>
+        </div>
+        <div class="conteudo-temporada">
+          <h3>Temporada 4</h3>
+          <p>
+            O Superman (Tyler Hoechlin) trava uma batalha brutal contra o
+            monstro de Luthor; Lois (Elizabeth Tulloch) e os meninos correm
+            contra o tempo para salvar o General Lane (Dylan Walsh).
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
