--- a/006 - Lois/index_jp.html
+++ b/006 - Lois/index_jp.html
@@ -10,8 +10,8 @@
     <nav class="topo">
       <a href="#sinopse" class="link">Sinopse</a>
       <a href="#disponibilidade" class="link">Disponibilidade</a>
-      <a href="#" class="link">Temporadas</a>
-      <a href="#" class="link">Imagens</a>
+      <a href="#temporadas" class="link">Temporadas</a>
+      <a href="#imagens" class="link">Imagens</a>
     </nav>
 
     <div class="banner"></div>
@@ -87,5 +87,39 @@
         </div>
       </div>
     </div>
+    
+    <div id="imagens" class="secao-imagens">
+      <div class="largura-1024">
+          <h2>Imagens da série</h2>
+
+          <div class="galeria">
+              <img class="imagem-sombra"
+                  src="http://www.devmedia.com.br/arquivos/cursos/css_modf_elements/embed/aula-8/img/1.png"
+                  alt="Superman">
+              <img class="imagem-sombra"
+                  src="http://www.devmedia.com.br/arquivos/cursos/css_modf_elements/embed/aula-8/img/2.jpg"
+                  alt="Clark e Jordan">
+              <img class="imagem-sombra"
+                  src="http://www.devmedia.com.br/arquivos/cursos/css_modf_elements/embed/aula-8/img/3.jpg"
+                  alt="Lois e Clark">
+              <img class="imagem-sombra"
+                  src="http://www.devmedia.com.br/arquivos/cursos/css_modf_elements/embed/aula-8/img/4.jpg"
+                  alt="Jonathan e Lois">
+              <img class="imagem-sombra"
+                  src="http://www.devmedia.com.br/arquivos/cursos/css_modf_elements/embed/aula-8/img/5.jpg"
+                  alt="Lois e Jordan">
+              <img class="imagem-sombra"
+                  src="http://www.devmedia.com.br/arquivos/cursos/css_modf_elements/embed/aula-8/img/6.jpg"
+                  alt="Jordan e Jonathan">
+          </div>
+          <span>
+              Assista Superman & Lois na <a href="https://play.max.com/" target="_blank">HBO Max</a>
+          </span>
+      </div>
+  </div>
+
+  <div class="rodape">
+      <h3>HBO Max - 2025</h3>
+  </div>
   </body>
 </html>
